XMLExper/m12/m12_434_1_tinyxml2/comparisono.txt
tinyxml2.cpp: In member function ‘virtual bool tinyxml2::XMLText::ShallowEqual(const tinyxml2::XMLNode*) const’:
tinyxml2.cpp:1288:58: error: cannot dynamic_cast ‘text’ (of type ‘const class tinyxml2::XMLText*’) to type ‘class tinyxml2::XMLNode*’ (conversion casts away constness)
 1288 |     return ( /*PCI*/dynamic_cast<tinyxml2::XMLNode*>(text) && XMLUtil::StringEqual( text->Value(), Value() ) );
      |                                                          ^
diff: tinyxml2.o: No such file or directory
